Update Article section with Illuminati content

--- a/index.html
+++ b/index.html
@@ -253,20 +253,23 @@
                             <div class="gp-case-head">
                                 <div class="gp-case-title marquee" aria-hidden="true">
                                     <div class="marquee-track">
-                                        <span>Latest Tech •</span><span>Latest Tech •</span><span>Latest Tech
-                                            •</span><span>Latest Tech •</span>
-                                        <span>Latest Tech •</span><span>Latest Tech •</span><span>Latest Tech
-                                            •</span><span>Latest Tech •</span>
+                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
+                                            Myths
+                                            •</span><span>History & Myths •</span>
+                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
+                                            Myths
+                                            •</span><span>History & Myths •</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <h2 class="gp-case-big-title">CYBERPUNK DEV</h2>
+                            <h2 class="gp-case-big-title">THE ILLUMINATI</h2>
 
-                            <a class="gp-case-hit" href="https://github.com/daneyyhh" target="_blank" rel="noreferrer">
+                            <a class="gp-case-hit" href="https://github.com/daneyyhh/illuminati-article" target="_blank"
+                                rel="noreferrer">
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
-                                        <span>Tech</span><span>Coding</span><span>Future</span><span>Design</span>
+                                        <span>History</span><span>Myths</span><span>Conspiracy</span><span>Analysis</span>
                                     </div>
                                     <div class="gp-case-actions">
                                         <span class="gp-chip">Read Article</span>
