Fix: Update Project links to specific GitHub repositories

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                             <!-- Centered Big Title -->
                             <h2 class="gp-case-big-title">FIVEM RESOURCES</h2>
 
-                            <a class="gp-case-hit" href="https://github.com/daneyyhh" target="_blank" rel="noreferrer">
+                            <a class="gp-case-hit" href="https://github.com/daneyyhh/fivem-resources" target="_blank"
+                                rel="noreferrer">
                                 <!-- Body for Bottom Controls -->
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
@@ -194,7 +195,8 @@
 
                             <h2 class="gp-case-big-title">ASTRO BOT</h2>
 
-                            <a class="gp-case-hit" href="https://github.com/daneyyhh" target="_blank" rel="noreferrer">
+                            <a class="gp-case-hit" href="https://github.com/daneyyhh/astrobot-discord" target="_blank"
+                                rel="noreferrer">
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
                                         <span>Python</span><span>Discord.py</span><span>Automation</span><span>Community</span>
@@ -222,7 +224,8 @@
 
                             <h2 class="gp-case-big-title">3D PHYSICS</h2>
 
-                            <a class="gp-case-hit" href="https://github.com/daneyyhh" target="_blank" rel="noreferrer">
+                            <a class="gp-case-hit" href="https://github.com/daneyyhh/3d-bouncing-ball-game"
+                                target="_blank" rel="noreferrer">
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
                                         <span>Unity</span><span>C#</span><span>HLSL</span><span>Realtime
