Content: Remove 'Lets work together' hero marquee & slow down marquee speed (50s) v9

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Space+Mono:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css?v=7">
+    <link rel="stylesheet" href="./src/style.css?v=9">
     <!-- Font Awesome -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 </head>
@@ -85,14 +85,7 @@
                         </div>
                     </div>
 
-                    <div class="gp-hero-marquee" aria-hidden="true">
-                        <div class="marquee-track">
-                            <span>Let’s work together •</span><span>Let’s work together •</span><span>Let’s work
-                                together •</span><span>Let’s work together •</span>
-                            <span>Let’s work together •</span><span>Let’s work together •</span><span>Let’s work
-                                together •</span><span>Let’s work together •</span>
-                        </div>
-                    </div>
+                    <!-- Marquee Removed as requested -->
 
                     <div class="gp-hero-bottom">
                         <div class="scroll-down-indicator">
