--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Space+Mono:wght@400;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./src/style.css?v=15">
-    <!-- Font Awesome -->
+    <link rel="stylesheet" href="./src/style.css?v=18">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Lenis for Smooth Scroll -->
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
 </head>
 
 <body class="loading-active">
