Restore Original Article Layout (The old way)

--- a/index.html
+++ b/index.html
@@ -249,30 +249,24 @@
                         </div>
                     </div>
 
-                    <div class="gp-case">
-                        <a href="https://medium.com/@reuben_rapose/the-history-of-conspiracy-theories-and-how-they-shape-our-world-today-0274154fa16b"
-                            target="_blank" rel="noreferrer">
+                    <div class="gp-case-list">
+                        <!-- Article 1 -->
+                        <article class="gp-case gp-article-1" data-case>
                             <div class="gp-case-head">
                                 <div class="gp-case-title marquee" aria-hidden="true">
                                     <div class="marquee-track">
-                                        <span>Conspiracy Theories •</span><span>Conspiracy Theories
-                                            •</span><span>Conspiracy Theories •</span><span>Conspiracy Theories
-                                            •</span>
-                                        <span>Conspiracy Theories •</span><span>Conspiracy Theories
-                                            •</span><span>Conspiracy Theories •</span><span>Conspiracy Theories
-                                            •</span>
+                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
+                                            Myths •</span><span>History & Myths •</span>
+                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
+                                            Myths •</span><span>History & Myths •</span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="gp-case-body">
-                                <div class="gp-case-covers">
-                                    <img src="images/illuminati-cover-v2.jpg" alt="Conspiracy Theories Cover 1">
-                                    <img src="images/illuminati-cover.jpg" alt="Conspiracy Theories Cover 2">
-                                </div>
-                            </div>
-                        </a>
-                        <article class="gp-case-info">
-                            <a href="https://medium.com/@reuben_rapose/the-history-of-conspiracy-theories-and-how-they-shape-our-world-today-0274154fa16b"
+
+                            <h2 class="gp-case-big-title">THE ILLUMINATI</h2>
+
+                            <a class="gp-case-hit"
+                                href="https://medium.com/@reuben_rapose/the-history-of-conspiracy-theories-and-how-they-shape-our-world-today-0274154fa16b"
                                 target="_blank" rel="noreferrer">
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
