Rename UI marquee from Switcher to Browser Card

--- a/index.html
+++ b/index.html
@@ -296,9 +296,11 @@
                         <div class="gp-case-head">
                             <div class="gp-case-title marquee" aria-hidden="true">
                                 <div class="marquee-track">
-                                    <span>Switcher •</span><span>Switcher •</span><span>Switcher •</span><span>Switcher
+                                    <span>Browser Card •</span><span>Browser Card •</span><span>Browser Card
+                                        •</span><span>Browser Card
                                         •</span>
-                                    <span>Switcher •</span><span>Switcher •</span><span>Switcher •</span><span>Switcher
+                                    <span>Browser Card •</span><span>Browser Card •</span><span>Browser Card
+                                        •</span><span>Browser Card
                                         •</span>
                                 </div>
                             </div>
