Rename UI marquee to UI Projects

--- a/index.html
+++ b/index.html
@@ -296,12 +296,10 @@
                         <div class="gp-case-head">
                             <div class="gp-case-title marquee" aria-hidden="true">
                                 <div class="marquee-track">
-                                    <span>Browser Card •</span><span>Browser Card •</span><span>Browser Card
-                                        •</span><span>Browser Card
-                                        •</span>
-                                    <span>Browser Card •</span><span>Browser Card •</span><span>Browser Card
-                                        •</span><span>Browser Card
-                                        •</span>
+                                    <span>UI Projects •</span><span>UI Projects •</span><span>UI Projects
+                                        •</span><span>UI Projects •</span>
+                                    <span>UI Projects •</span><span>UI Projects •</span><span>UI Projects
+                                        •</span><span>UI Projects •</span>
                                 </div>
                             </div>
                         </div>
