--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
                             </div>
                         </div>
 
-                        <div class="card-container" style="display: flex; justify-content: center; padding: 4rem 0;">
+                        <div class="card-container"
+                            style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; padding: 4rem 0;">
                             <div class="browser-card">
                                 <div class="tools">
                                     <div class="circle"><span class="box red"></span></div>
@@ -327,6 +328,21 @@
                                             <span class="name">JS</span>
                                         </label>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="browser-card">
+                                <div class="tools">
+                                    <div class="circle"><span class="box red"></span></div>
+                                    <div class="circle"><span class="box yellow"></span></div>
+                                    <div class="circle"><span class="box green"></span></div>
+                                </div>
+                                <div class="card-content"
+                                    style="display: flex; justify-content: center; align-items: center; height: 100%;">
+                                    <button class="btn-23">
+                                        <span class="text">Hover Me</span>
+                                        <span class="marquee">Hover Me</span>
+                                    </button>
                                 </div>
                             </div>
                         </div>
