Replace loader with Love/Death/Robots theme

--- a/index.html
+++ b/index.html
@@ -20,10 +20,42 @@
 <body class="loading-active">
 
     <!-- Loading Screen -->
+    <!-- Loader -->
     <div class="loader">
-        <div class="loader-content">
-            <p class="loader-text">loading</p>
-            <div class="load"></div>
+        <div class="loader-inner-wrapper"> <!-- Added wrapper for centering -->
+            <div class="container">
+                <div class="carousel">
+                    <div class="love"></div>
+                    <div class="love"></div>
+                    <div class="love"></div>
+                    <div class="love"></div>
+                    <div class="love"></div>
+                    <div class="love"></div>
+                    <div class="love"></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="carousel">
+                    <div class="death"></div>
+                    <div class="death"></div>
+                    <div class="death"></div>
+                    <div class="death"></div>
+                    <div class="death"></div>
+                    <div class="death"></div>
+                    <div class="death"></div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="carousel">
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                    <div class="robots"></div>
+                </div>
+            </div>
         </div>
     </div>
 
