Fix layout aggression and style loader white

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Loader -->
     <div class="loader">
         <div class="loader-inner-wrapper"> <!-- Added wrapper for centering -->
-            <div class="container">
+            <div class="ldr-container">
                 <div class="carousel">
                     <div class="love"></div>
                     <div class="love"></div>
@@ -34,7 +34,7 @@
                     <div class="love"></div>
                 </div>
             </div>
-            <div class="container">
+            <div class="ldr-container">
                 <div class="carousel">
                     <div class="death"></div>
                     <div class="death"></div>
@@ -45,7 +45,7 @@
                     <div class="death"></div>
                 </div>
             </div>
-            <div class="container">
+            <div class="ldr-container">
                 <div class="carousel">
                     <div class="robots"></div>
                     <div class="robots"></div>
