--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/style.css?v=20">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- Lenis for Smooth Scroll -->
-    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+
 </head>
 
 <body class="loading-active">
@@ -315,61 +314,138 @@
                 </div>
             </section>
 
-            <!-- UI Section -->
-            <section id="ui" class="gp-cases">
+            <!-- UI Section (Gallery4 Template) -->
+            <section id="ui" class="gallery4-section">
                 <div class="container">
-                    <div class="gp-cases-top">
-                        <div class="gp-cases-meta">
-                            <div class="gp-mini">UI</div>
+                    <div class="gallery4-header">
+                        <div class="gallery4-title-group">
+                            <h2 class="gallery4-title">UI Projects</h2>
+                            <p class="gallery4-desc">Explore a collection of interface designs and interactive
+                                components crafted with modern web technologies.</p>
+                        </div>
+                        <div class="gallery4-nav">
+                            <button id="gallery-prev" class="gallery4-btn" aria-label="Previous slide">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-arrow-left">
+                                    <path d="m12 19-7-7 7-7" />
+                                    <path d="M19 12H5" />
+                                </svg>
+                            </button>
+                            <button id="gallery-next" class="gallery4-btn" aria-label="Next slide">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" class="lucide lucide-arrow-right">
+                                    <path d="M5 12h14" />
+                                    <path d="m12 5 7 7-7 7" />
+                                </svg>
+                            </button>
                         </div>
                     </div>
 
-                    <div class="gp-case">
-                        <div class="gp-case-head">
-                            <div class="gp-case-title marquee" aria-hidden="true">
-                                <div class="marquee-track">
-                                    <span>UI Projects •</span><span>UI Projects •</span><span>UI Projects
-                                        •</span><span>UI Projects •</span>
-                                    <span>UI Projects •</span><span>UI Projects •</span><span>UI Projects
-                                        •</span><span>UI Projects •</span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-container"
-                            style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; padding: 4rem 0;">
-                            <div class="browser-card">
-
-                                <div class="card-content"
-                                    style="display: flex; justify-content: center; align-items: center; height: 100%;">
-                                    <div class="radio-inputs">
-                                        <label class="radio">
-                                            <input type="radio" name="radio" checked="">
-                                            <span class="name">HTML</span>
-                                        </label>
-                                        <label class="radio">
-                                            <input type="radio" name="radio">
-                                            <span class="name">CSS</span>
-                                        </label>
-                                        <label class="radio">
-                                            <input type="radio" name="radio">
-                                            <span class="name">JS</span>
-                                        </label>
+                    <div class="gallery4-carousel">
+                        <div class="gallery4-track" id="gallery-track">
+                            <!-- Item 1 -->
+                            <div class="gallery4-item">
+                                <a href="#" class="gallery4-card">
+                                    <div class="gallery4-image-wrapper">
+                                        <img src="https://images.unsplash.com/photo-1551250928-243dc937c49d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
+                                            alt="Project 1" class="gallery4-img">
+                                        <div class="gallery4-overlay"></div>
+                                        <div class="gallery4-content">
+                                            <h3 class="gallery4-card-title">Modern Dashboard</h3>
+                                            <p class="gallery4-card-desc">A clean, component-based dashboard interface
+                                                designed for scalability.</p>
+                                            <div class="gallery4-readmore">
+                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="ml-2">
+                                                    <path d="M5 12h14" />
+                                                    <path d="m12 5 7 7-7 7" />
+                                                </svg>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
-
-                            <div class="browser-card">
-
-                                <div class="card-content"
-                                    style="display: flex; justify-content: center; align-items: center; height: 100%;">
-                                    <button class="btn-23">
-                                        <span class="text">Hover Me</span>
-                                        <span class="marquee">Hover Me</span>
-                                    </button>
-                                </div>
+                            <!-- Item 2 -->
+                            <div class="gallery4-item">
+                                <a href="#" class="gallery4-card">
+                                    <div class="gallery4-image-wrapper">
+                                        <img src="https://images.unsplash.com/photo-1551250928-e4a05afaed1e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
+                                            alt="Project 2" class="gallery4-img">
+                                        <div class="gallery4-overlay"></div>
+                                        <div class="gallery4-content">
+                                            <h3 class="gallery4-card-title">E-Commerce UI</h3>
+                                            <p class="gallery4-card-desc">Utility-first design approach ensuring
+                                                consistency across the platform.</p>
+                                            <div class="gallery4-readmore">
+                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="ml-2">
+                                                    <path d="M5 12h14" />
+                                                    <path d="m12 5 7 7-7 7" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Item 3 -->
+                            <div class="gallery4-item">
+                                <a href="#" class="gallery4-card">
+                                    <div class="gallery4-image-wrapper">
+                                        <img src="https://images.unsplash.com/photo-1536735561749-fc87494598cb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
+                                            alt="Project 3" class="gallery4-img">
+                                        <div class="gallery4-overlay"></div>
+                                        <div class="gallery4-content">
+                                            <h3 class="gallery4-card-title">Mobile App Interface</h3>
+                                            <p class="gallery4-card-desc">Interactive prototypes focusing on
+                                                gesture-based navigation.</p>
+                                            <div class="gallery4-readmore">
+                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="ml-2">
+                                                    <path d="M5 12h14" />
+                                                    <path d="m12 5 7 7-7 7" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Item 4 -->
+                            <div class="gallery4-item">
+                                <a href="#" class="gallery4-card">
+                                    <div class="gallery4-image-wrapper">
+                                        <img src="https://images.unsplash.com/photo-1548324215-9133768e4094?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
+                                            alt="Project 4" class="gallery4-img">
+                                        <div class="gallery4-overlay"></div>
+                                        <div class="gallery4-content">
+                                            <h3 class="gallery4-card-title">Design System</h3>
+                                            <p class="gallery4-card-desc">A comprehensive design language built for
+                                                reusable components.</p>
+                                            <div class="gallery4-readmore">
+                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
+                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                                    class="ml-2">
+                                                    <path d="M5 12h14" />
+                                                    <path d="m12 5 7 7-7 7" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="gallery4-dots" id="gallery-dots">
+                        <!-- Dots injected via JS -->
                     </div>
                 </div>
             </section>
@@ -454,9 +530,7 @@
         </div>
     </div>
 
-    <!-- GSAP Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <!-- Main JS (GSAP Imported) -->
     <script type="module" src="/src/main.js"></script>
 </body>
 
