Enhance: Add Global 3D Background and Card Tilt Effects

--- a/index.html
+++ b/index.html
@@ -345,98 +345,98 @@
 
                     <div class="gallery4-carousel">
                         <div class="gallery4-track" id="gallery-track">
-                            <!-- Item 1 -->
+                            <!-- Item 1: shadcn/ui -->
                             <div class="gallery4-item">
-                                <a href="#" class="gallery4-card">
-                                    <div class="gallery4-image-wrapper">
-                                        <img src="https://images.unsplash.com/photo-1551250928-243dc937c49d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                                            alt="Project 1" class="gallery4-img">
-                                        <div class="gallery4-overlay"></div>
-                                        <div class="gallery4-content">
-                                            <h3 class="gallery4-card-title">Modern Dashboard</h3>
-                                            <p class="gallery4-card-desc">A clean, component-based dashboard interface
-                                                designed for scalability.</p>
-                                            <div class="gallery4-readmore">
-                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="ml-2">
-                                                    <path d="M5 12h14" />
-                                                    <path d="m12 5 7 7-7 7" />
-                                                </svg>
-                                            </div>
+                                <a href="https://ui.shadcn.com" target="_blank" class="gallery4-card no-image">
+                                    <div class="gallery4-content">
+                                        <h3 class="gallery4-card-title">shadcn/ui: Building a Modern Component Library
+                                        </h3>
+                                        <p class="gallery4-card-desc">Explore how shadcn/ui revolutionized React
+                                            component libraries by providing a unique approach to component distribution
+                                            and customization.</p>
+                                        <div class="gallery4-readmore">
+                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </a>
                             </div>
-                            <!-- Item 2 -->
+                            <!-- Item 2: Tailwind CSS -->
                             <div class="gallery4-item">
-                                <a href="#" class="gallery4-card">
-                                    <div class="gallery4-image-wrapper">
-                                        <img src="https://images.unsplash.com/photo-1551250928-e4a05afaed1e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                                            alt="Project 2" class="gallery4-img">
-                                        <div class="gallery4-overlay"></div>
-                                        <div class="gallery4-content">
-                                            <h3 class="gallery4-card-title">E-Commerce UI</h3>
-                                            <p class="gallery4-card-desc">Utility-first design approach ensuring
-                                                consistency across the platform.</p>
-                                            <div class="gallery4-readmore">
-                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="ml-2">
-                                                    <path d="M5 12h14" />
-                                                    <path d="m12 5 7 7-7 7" />
-                                                </svg>
-                                            </div>
+                                <a href="https://tailwindcss.com" target="_blank" class="gallery4-card no-image">
+                                    <div class="gallery4-content">
+                                        <h3 class="gallery4-card-title">Tailwind CSS: The Utility-First Revolution</h3>
+                                        <p class="gallery4-card-desc">Discover how Tailwind CSS transformed the way
+                                            developers style their applications, offering a utility-first approach that
+                                            speeds up development.</p>
+                                        <div class="gallery4-readmore">
+                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </a>
                             </div>
-                            <!-- Item 3 -->
+                            <!-- Item 3: Astro -->
                             <div class="gallery4-item">
-                                <a href="#" class="gallery4-card">
-                                    <div class="gallery4-image-wrapper">
-                                        <img src="https://images.unsplash.com/photo-1536735561749-fc87494598cb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                                            alt="Project 3" class="gallery4-img">
-                                        <div class="gallery4-overlay"></div>
-                                        <div class="gallery4-content">
-                                            <h3 class="gallery4-card-title">Mobile App Interface</h3>
-                                            <p class="gallery4-card-desc">Interactive prototypes focusing on
-                                                gesture-based navigation.</p>
-                                            <div class="gallery4-readmore">
-                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="ml-2">
-                                                    <path d="M5 12h14" />
-                                                    <path d="m12 5 7 7-7 7" />
-                                                </svg>
-                                            </div>
+                                <a href="https://astro.build" target="_blank" class="gallery4-card no-image">
+                                    <div class="gallery4-content">
+                                        <h3 class="gallery4-card-title">Astro: The All-in-One Web Framework</h3>
+                                        <p class="gallery4-card-desc">Learn how Astro's innovative 'Islands
+                                            Architecture' and zero-JS-by-default approach is helping developers build
+                                            faster websites.</p>
+                                        <div class="gallery4-readmore">
+                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </a>
                             </div>
-                            <!-- Item 4 -->
+                            <!-- Item 4: React -->
                             <div class="gallery4-item">
-                                <a href="#" class="gallery4-card">
-                                    <div class="gallery4-image-wrapper">
-                                        <img src="https://images.unsplash.com/photo-1548324215-9133768e4094?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&q=80&w=1080"
-                                            alt="Project 4" class="gallery4-img">
-                                        <div class="gallery4-overlay"></div>
-                                        <div class="gallery4-content">
-                                            <h3 class="gallery4-card-title">Design System</h3>
-                                            <p class="gallery4-card-desc">A comprehensive design language built for
-                                                reusable components.</p>
-                                            <div class="gallery4-readmore">
-                                                View Project <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                                                    height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="ml-2">
-                                                    <path d="M5 12h14" />
-                                                    <path d="m12 5 7 7-7 7" />
-                                                </svg>
-                                            </div>
+                                <a href="https://react.dev" target="_blank" class="gallery4-card no-image">
+                                    <div class="gallery4-content">
+                                        <h3 class="gallery4-card-title">React: Pioneering Component-Based UI</h3>
+                                        <p class="gallery4-card-desc">See how React continues to shape modern web
+                                            development with its component-based architecture, enabling developers to
+                                            build complex user interfaces.</p>
+                                        <div class="gallery4-readmore">
+                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- Item 5: Next.js -->
+                            <div class="gallery4-item">
+                                <a href="https://nextjs.org" target="_blank" class="gallery4-card no-image">
+                                    <div class="gallery4-content">
+                                        <h3 class="gallery4-card-title">Next.js: The React Framework for Production</h3>
+                                        <p class="gallery4-card-desc">Explore how Next.js has become the go-to framework
+                                            for building full-stack React applications, offering features like server
+                                            components.</p>
+                                        <div class="gallery4-readmore">
+                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
                                         </div>
                                     </div>
                                 </a>
