--- a/index.html
+++ b/index.html
@@ -16,47 +16,7 @@
 
 </head>
 
-<body class="loading-active">
-
-    <!-- Loading Screen -->
-    <!-- Loader -->
-    <div class="loader">
-        <div class="loader-inner-wrapper"> <!-- Added wrapper for centering -->
-            <div class="ldr-container">
-                <div class="carousel">
-                    <div class="love"></div>
-                    <div class="love"></div>
-                    <div class="love"></div>
-                    <div class="love"></div>
-                    <div class="love"></div>
-                    <div class="love"></div>
-                    <div class="love"></div>
-                </div>
-            </div>
-            <div class="ldr-container">
-                <div class="carousel">
-                    <div class="death"></div>
-                    <div class="death"></div>
-                    <div class="death"></div>
-                    <div class="death"></div>
-                    <div class="death"></div>
-                    <div class="death"></div>
-                    <div class="death"></div>
-                </div>
-            </div>
-            <div class="ldr-container">
-                <div class="carousel">
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                    <div class="robots"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+<body>
 
     <!-- Canvas for Cursor Trail -->
     <canvas id="cursor-canvas"></canvas>
@@ -66,7 +26,7 @@
     <div class="cursor-dot" aria-hidden="true"></div>
 
     <!-- Main Site -->
-    <div class="site-wrapper">
+    <div class="site-wrapper" style="opacity: 1; pointer-events: auto;">
         <header class="header">
             <div class="container nav-container">
                 <a href="#" class="logo">REUBEN<span class="dot">_</span>
@@ -530,30 +490,6 @@
         </div>
     </div>
 
-    <!-- Failsafe: Remove loader if JS fails -->
-    <script>
-        setTimeout(() => {
-            const loader = document.querySelector('.loader');
-            if (document.body.classList.contains('loading-active') || (loader && getComputedStyle(loader).display !== 'none')) {
-                console.warn('Loader timed out, forcing removal.');
-                document.body.classList.remove('loading-active');
-
-                // Force hide the loader element
-                if (loader) {
-                    loader.style.display = 'none';
-                    loader.style.pointerEvents = 'none';
-                    loader.style.zIndex = '-9999';
-                }
-
-                // Also show content just in case
-                const site = document.querySelector('.site-wrapper');
-                if (site) {
-                    site.style.opacity = '1';
-                    site.style.pointerEvents = 'auto';
-                }
-            }
-        }, 4000); 
-    </script>
     <!-- Main JS (GSAP Imported) -->
     <script type="module" src="/src/main.js"></script>
 </body>
