Deploy: Force update to v0.0.16 for verification

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             Hi</button>
                     </div>
                     <div class="gp-footer-bottom">
-                        <div class="gp-mini">Copyright 2026 • All rights reserved</div>
+                        <div class="gp-mini">Copyright 2026 • All rights reserved (v0.0.16)</div>
                         <div class="gp-footer-links">
                             <a href="https://github.com/daneyyhh" target="_blank" rel="noreferrer">Github</a>
                             <!-- LinkedIn removed as requested -->
