Add 3D loader, update project images, and add Finkee project

--- a/index.html
+++ b/index.html
@@ -305,6 +305,28 @@
 
                     <div class="gallery4-carousel">
                         <div class="gallery4-track" id="gallery-track">
+                            <div class="gallery4-item">
+                                <a href="#" class="gallery4-card">
+                                    <div class="gallery4-image-wrapper">
+                                        <img src="/images/finkee-cover.png" alt="Finkee" class="gallery4-img">
+                                        <div class="gallery4-overlay"></div>
+                                    </div>
+                                    <div class="gallery4-content"
+                                        style="position: absolute; bottom: 0; padding: 1.5rem; width: 100%;">
+                                        <h3 class="gallery4-card-title">Finkee Dashboard</h3>
+                                        <p class="gallery4-card-desc">A comprehensive financial tracking application
+                                            with modern UI patterns.</p>
+                                        <div class="gallery4-readmore">
+                                            View Details <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
+                                                <path d="M5 12h14" />
+                                                <path d="m12 5 7 7-7 7" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
                             <!-- Item 1: shadcn/ui -->
                             <div class="gallery4-item">
                                 <a href="https://ui.shadcn.com" target="_blank" class="gallery4-card no-image">
