Fix missing loader HTML and remove unwanted 3D skew effect

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <div class="cursor" aria-hidden="true"></div>
     <div class="cursor-dot" aria-hidden="true"></div>
 
+    <!-- Loader -->
+    <div class="loader">
+        <!-- 3D Canvas will be injected here by loader3d.js -->
+    </div>
+
     <!-- Main Site -->
     <div class="site-wrapper" style="opacity: 1; pointer-events: auto;">
         <header class="header">
