--- a/index.html
+++ b/index.html
@@ -279,163 +279,7 @@
                 </div>
             </section>
 
-            <!-- UI Section (Gallery4 Template) -->
-            <section id="ui" class="gallery4-section">
-                <div class="container">
-                    <div class="gallery4-header">
-                        <div class="gallery4-title-group">
-                            <h2 class="gallery4-title">UI Projects</h2>
-                            <p class="gallery4-desc">Explore a collection of interface designs and interactive
-                                components crafted with modern web technologies.</p>
-                        </div>
-                        <div class="gallery4-nav">
-                            <button id="gallery-prev" class="gallery4-btn" aria-label="Previous slide">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="lucide lucide-arrow-left">
-                                    <path d="m12 19-7-7 7-7" />
-                                    <path d="M19 12H5" />
-                                </svg>
-                            </button>
-                            <button id="gallery-next" class="gallery4-btn" aria-label="Next slide">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                    fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                    stroke-linejoin="round" class="lucide lucide-arrow-right">
-                                    <path d="M5 12h14" />
-                                    <path d="m12 5 7 7-7 7" />
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-
-                    <div class="gallery4-carousel">
-                        <div class="gallery4-track" id="gallery-track">
-                            <div class="gallery4-item">
-                                <a href="#" class="gallery4-card">
-                                    <div class="gallery4-image-wrapper">
-                                        <img src="/images/finkee-cover.png" alt="Finkee" class="gallery4-img">
-                                        <div class="gallery4-overlay"></div>
-                                    </div>
-                                    <div class="gallery4-content"
-                                        style="position: absolute; bottom: 0; padding: 1.5rem; width: 100%;">
-                                        <h3 class="gallery4-card-title">Finkee Dashboard</h3>
-                                        <p class="gallery4-card-desc">A comprehensive financial tracking application
-                                            with modern UI patterns.</p>
-                                        <div class="gallery4-readmore">
-                                            View Details <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Item 1: shadcn/ui -->
-                            <div class="gallery4-item">
-                                <a href="https://ui.shadcn.com" target="_blank" class="gallery4-card no-image">
-                                    <div class="gallery4-content">
-                                        <h3 class="gallery4-card-title">shadcn/ui: Building a Modern Component Library
-                                        </h3>
-                                        <p class="gallery4-card-desc">Explore how shadcn/ui revolutionized React
-                                            component libraries by providing a unique approach to component distribution
-                                            and customization.</p>
-                                        <div class="gallery4-readmore">
-                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Item 2: Tailwind CSS -->
-                            <div class="gallery4-item">
-                                <a href="https://tailwindcss.com" target="_blank" class="gallery4-card no-image">
-                                    <div class="gallery4-content">
-                                        <h3 class="gallery4-card-title">Tailwind CSS: The Utility-First Revolution</h3>
-                                        <p class="gallery4-card-desc">Discover how Tailwind CSS transformed the way
-                                            developers style their applications, offering a utility-first approach that
-                                            speeds up development.</p>
-                                        <div class="gallery4-readmore">
-                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Item 3: Astro -->
-                            <div class="gallery4-item">
-                                <a href="https://astro.build" target="_blank" class="gallery4-card no-image">
-                                    <div class="gallery4-content">
-                                        <h3 class="gallery4-card-title">Astro: The All-in-One Web Framework</h3>
-                                        <p class="gallery4-card-desc">Learn how Astro's innovative 'Islands
-                                            Architecture' and zero-JS-by-default approach is helping developers build
-                                            faster websites.</p>
-                                        <div class="gallery4-readmore">
-                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Item 4: React -->
-                            <div class="gallery4-item">
-                                <a href="https://react.dev" target="_blank" class="gallery4-card no-image">
-                                    <div class="gallery4-content">
-                                        <h3 class="gallery4-card-title">React: Pioneering Component-Based UI</h3>
-                                        <p class="gallery4-card-desc">See how React continues to shape modern web
-                                            development with its component-based architecture, enabling developers to
-                                            build complex user interfaces.</p>
-                                        <div class="gallery4-readmore">
-                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <!-- Item 5: Next.js -->
-                            <div class="gallery4-item">
-                                <a href="https://nextjs.org" target="_blank" class="gallery4-card no-image">
-                                    <div class="gallery4-content">
-                                        <h3 class="gallery4-card-title">Next.js: The React Framework for Production</h3>
-                                        <p class="gallery4-card-desc">Explore how Next.js has become the go-to framework
-                                            for building full-stack React applications, offering features like server
-                                            components.</p>
-                                        <div class="gallery4-readmore">
-                                            Read more <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-                                                stroke-linecap="round" stroke-linejoin="round" class="ml-2">
-                                                <path d="M5 12h14" />
-                                                <path d="m12 5 7 7-7 7" />
-                                            </svg>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="gallery4-dots" id="gallery-dots">
-                        <!-- Dots injected via JS -->
-                    </div>
-                </div>
-            </section>
+            <!-- UI Section Removed -->
 
             <!-- Footer -->
             <footer class="gp-footer">
