--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <li><a href="#about" class="nav-item" data-nav-link>About Us</a></li>
                         <li><a href="#cases" class="nav-item" data-nav-link>Projects</a></li>
                         <li><a href="#articles" class="nav-item" data-nav-link>Articles</a></li>
-                        <li><a href="#ui" class="nav-item" data-nav-link>UI</a></li>
+                        <!-- UI Link removed -->
                         <li><button class="nav-item nav-cta" data-open-contact type="button"
                                 data-cursor-label="Contact">Talk</button></li>
                     </ul>
