Slow down marquee further and update Illuminati project details

--- a/index.html
+++ b/index.html
@@ -245,17 +245,16 @@
                             <div class="gp-case-head">
                                 <div class="gp-case-title marquee" aria-hidden="true">
                                     <div class="marquee-track">
-                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
-                                            Myths •</span><span>History & Myths •</span>
-                                        <span>History & Myths •</span><span>History & Myths •</span><span>History &
-                                            Myths •</span><span>History & Myths •</span>
+                                        <span>THE ILLUMINATI •</span><span>THE ILLUMINATI •</span><span>THE ILLUMINATI
+                                            •</span><span>THE ILLUMINATI •</span>
+                                        <span>THE ILLUMINATI •</span><span>THE ILLUMINATI •</span><span>THE ILLUMINATI
+                                            •</span><span>THE ILLUMINATI •</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <a class="gp-case-hit"
-                                href="https://medium.com/@reuben_rapose/the-history-of-conspiracy-theories-and-how-they-shape-our-world-today-0274154fa16b"
-                                target="_blank" rel="noreferrer">
+                            <a class="gp-case-hit" href="https://github.com/daneyyhh/The-Illuminati" target="_blank"
+                                rel="noreferrer">
                                 <div class="gp-case-body">
                                     <div class="gp-case-tags">
                                         <span>History</span><span>Myths</span><span>Conspiracy</span><span>Analysis</span>
