Implement Floating Pill Navbar (Home included) v0.0.20

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 </a>
                 <nav>
                     <ul class="nav-links">
+                        <li><a href="#" class="nav-item" data-nav-link>Home</a></li>
                         <li><a href="#about" class="nav-item" data-nav-link>About Us</a></li>
                         <li><a href="#cases" class="nav-item" data-nav-link>Projects</a></li>
                         <li><a href="#articles" class="nav-item" data-nav-link>Articles</a></li>
