Add Talk section to navbar and update contact form theme

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                         <li><a href="#about" class="nav-item" data-nav-link>About Us</a></li>
                         <li><a href="#cases" class="nav-item" data-nav-link>Projects</a></li>
                         <li><a href="#articles" class="nav-item" data-nav-link>Articles</a></li>
+                        <li><button type="button" class="nav-item" data-open-contact
+                                style="background:none; border:none; cursor:pointer;">Talk</button></li>
                     </ul>
                 </nav>
             </div>
@@ -337,7 +339,7 @@
                     <input type="text" name="name" required autocomplete="name">
                 </label>
                 <label class="gp-field">
-                    <span>Email*</span>
+                    <span>Mail ID*</span>
                     <input type="email" name="email" required autocomplete="email">
                 </label>
                 <label class="gp-field">
